--- a/FrontendQMCB/index.html
+++ b/FrontendQMCB/index.html
@@ -31,6 +31,8 @@
     <script src="js/app/views/ItensMonitoramentoView.js"></script>
     <script src="js/app/models/Mensagem.js"></script>
     <script src="js/app/views/MensagemView.js"></script>
+    <script src="js/app/models/Documento.js"></script>
+    <script src="js/app/views/DocumentoView.js"></script>    
     <script>
         let itemMonitoramentoController = new ItemMonitoramentoController();
     </script>
