--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -35,6 +35,8 @@
     <script src="js/app/views/DocumentoView.js"></script>    
     <script>
         let itemMonitoramentoController = new ItemMonitoramentoController();
+
+        var URL_WEBSERVICE = "http://10.65.11.86:8080/ServicesQMCB";
     </script>
 </body>
 </html>
